--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -1,20 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-	<string-array name="default_preview">
+	<string-array name="ap_default_preview">
         <item>#ff670729</item>
         <item>#ff7a0c2d</item>
         <item>#ff96092d</item>
         <item>#ffa10a37</item>
     </string-array>
 
-    <string-array name="polluted_waves">
+    <string-array name="ap_polluted_waves">
         <item>#394948</item>
         <item>#5a7874</item>
         <item>#499092</item>
         <item>#43abae</item>
     </string-array>
 
-    <string-array name="medical_express">
+    <string-array name="ap_medical_express">
         <item>#a3a3a3</item>
         <item>#bbbbbb</item>
         <item>#cccccc</item>
