--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,10 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+
+    <color name="sb_value_sign_background">#7492E2</color>
+    <color name="sb_empty_segment_background">#858585</color>
+    <color name="sb_value_sign_text">#fff</color>
+    <color name="sb_segment_text">#fff</color>
+    <color name="sb_description_text">#444</color>
 </resources>
