--- a/app/src/main/res/layout/fragment_aqreadings_list_arcprogress.xml
+++ b/app/src/main/res/layout/fragment_aqreadings_list_arcprogress.xml
@@ -2,12 +2,10 @@
 <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/list"
+    android:id="@+id/ap_item_list"
     android:name="com.specknet.airrespeck.fragments.ItemFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginLeft="16dp"
-    android:layout_marginRight="16dp"
     app:layoutManager="LinearLayoutManager"
-    tools:context=".fragments.AirQualityFragment"
-    tools:listitem="@layout/fragment_air_quality_item" />
+    tools:context=".fragments.AQReadingsFragment"
+    tools:listitem="@layout/list_item_arcprogress" />
