--- a/app/src/main/res/layout/fragment_graphs.xml
+++ b/app/src/main/res/layout/fragment_graphs.xml
@@ -1,13 +1,12 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.DashboardFragment">
+    tools:context=".fragments.GraphsFragment">
 
-    <TextView
+    <ListView
+        android:id="@+id/graphs_list"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="hello blank fragment - dashboard" />
+        android:layout_height="wrap_content" />
 
 </FrameLayout>
