--- a/app/src/main/res/layout/list_item_listview.xml
+++ b/app/src/main/res/layout/list_item_listview.xml
@@ -19,7 +19,7 @@
         android:gravity="center_vertical|end" />
 
     <TextView
-        android:id="@+id/units"
+        android:id="@+id/unit"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
