--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,13 +1,27 @@
 <resources>
     <!-- Default screen margins, per the Android Design guidelines. -->
-    <dimen name="activity_horizontal_margin">16dp</dimen>
-    <dimen name="activity_vertical_margin">16dp</dimen>
-    <dimen name="appbar_padding_top">8dp</dimen>
+    <dimen name="activity_horizontal_margin">5sp</dimen>
+    <dimen name="activity_vertical_margin">5sp</dimen>
+    <dimen name="appbar_padding_top">2sp</dimen>
 
     <dimen name="font_size_small">12sp</dimen>
     <dimen name="font_size_normal">18sp</dimen>
     <dimen name="font_size_large">24sp</dimen>
     <dimen name="font_size_huge">30sp</dimen>
 
-    <dimen name="circular_gauge_item_width">150sp</dimen>
+    <dimen name="arc_progress_item_width">150sp</dimen>
+
+    <dimen name="sb_description_text_size">14sp</dimen>
+    <dimen name="sb_value_text_size">14sp</dimen>
+    <dimen name="sb_segment_text_size">14sp</dimen>
+
+    <dimen name="sb_bar_height">24dp</dimen>
+    <dimen name="sb_value_sign_height">32dp</dimen>
+    <dimen name="sb_value_sign_width">72dp</dimen>
+    <dimen name="sb_arrow_height">5dp</dimen>
+    <dimen name="sb_arrow_width">10dp</dimen>
+    <dimen name="sb_description_box_height">24dp</dimen>
+
+    <dimen name="sb_segment_gap_width">2dp</dimen>
+    <dimen name="sb_value_sign_round">4dp</dimen>
 </resources>
