Various bug fixes: Arc progress gradient colour fixed. Saved instance of configuration change fixed. Font size change in Settings screen fixed. Some refactoring.

--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -9,6 +9,7 @@
         <attr name="ap_shadowed" format="boolean"/>
         <attr name="ap_rounded" format="boolean"/>
         <attr name="ap_dragged" format="boolean"/>
+        <attr name="ap_show_progress" format="boolean"/>
 
         <attr name="ap_typeface" format="string"/>
         <attr name="ap_text_color" format="color"/>
