--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -11,7 +11,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.specknet.airrespeck.MainActivity"
+    tools:context=".activities.MainActivity"
     tools:showIn="@layout/activity_main_buttons">
 
     <FrameLayout
