--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="https://schemas.android.com/tools"
-    tools:context="com.specknet.airrespeck.MainActivity">
+    tools:context="com.specknet.airrespeck.activities.MainActivity">
 
     <group
         android:id="@+id/main_menu_group">
