--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -7,22 +7,28 @@
         android:id="@+id/main_menu_group">
 
         <item
-            android:id="@+id/action_settings"
+            android:id="@+id/action_user_profile"
             android:orderInCategory="100"
-            android:title="@string/action_settings"
-            android:icon="@drawable/ic_settings"
+            android:title="@string/action_user_profile"
             app:showAsAction="ifRoom|withText" />
 
         <item
-            android:id="@+id/action_respeck"
+            android:id="@+id/action_settings"
             android:orderInCategory="90"
+            android:title="@string/action_settings"
+            android:icon="@drawable/ic_settings"
+            app:showAsAction="never" />
+
+        <item
+            android:id="@+id/action_respeck"
+            android:orderInCategory="80"
             android:title="@string/action_re_speck"
             android:icon="@drawable/ic_health"
             app:showAsAction="never" />
 
         <item
             android:id="@+id/action_airspeck"
-            android:orderInCategory="80"
+            android:orderInCategory="70"
             android:title="@string/action_air_speck"
             android:icon="@drawable/ic_air"
             app:showAsAction="never" />
