--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,7 +1,7 @@
 <resources>
     <!-- Default screen margins, per the Android Design guidelines. -->
-    <dimen name="activity_horizontal_margin">5sp</dimen>
-    <dimen name="activity_vertical_margin">5sp</dimen>
+    <dimen name="activity_horizontal_margin">16dp</dimen>
+    <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="appbar_padding_top">2sp</dimen>
 
     <dimen name="font_size_small">12sp</dimen>
@@ -9,7 +9,7 @@
     <dimen name="font_size_large">24sp</dimen>
     <dimen name="font_size_huge">30sp</dimen>
 
-    <dimen name="arc_progress_item_width">150sp</dimen>
+    <dimen name="arc_progress_item_width">180sp</dimen>
 
     <dimen name="sb_description_text_size">14sp</dimen>
     <dimen name="sb_value_text_size">14sp</dimen>
@@ -24,4 +24,5 @@
 
     <dimen name="sb_segment_gap_width">2dp</dimen>
     <dimen name="sb_value_sign_round">4dp</dimen>
+    <dimen name="fab_margin">16dp</dimen>
 </resources>
