--- a/app/src/main/res/layout/content_new_user.xml
+++ b/app/src/main/res/layout/content_new_user.xml
@@ -124,5 +124,18 @@ tools:showIn="@layout/activity_new_user">
     android:layout_gravity="center_horizontal"
     android:text="@string/new_user_register" />
 
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="25sp"
+        android:layout_gravity="center_horizontal" />
+
+    <TextView
+        android:id="@+id/new_user_message"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:gravity="center_horizontal"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
+
 </LinearLayout>
 
