--- a/app/src/main/res/layout/content_user_profile.xml
+++ b/app/src/main/res/layout/content_user_profile.xml
@@ -12,4 +12,94 @@
     tools:context="com.specknet.airrespeck.activities.UserProfileActivity"
     tools:showIn="@layout/activity_user_profile">
 
+    <TextView
+        android:id="@+id/textView_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="@string/user_profile_name"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:id="@+id/user_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:layout_alignBaseline="@+id/textView_name"
+        android:layout_alignBottom="@+id/textView_name"
+        android:layout_toEndOf="@+id/textView_name" />
+
+    <TextView
+        android:id="@+id/textView_birth_date"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="@string/user_profile_birth_date"
+        android:layout_below="@+id/textView_name"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:id="@+id/user_birth_date"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:layout_alignBaseline="@+id/textView_birth_date"
+        android:layout_alignBottom="@+id/textView_birth_date"
+        android:layout_toEndOf="@+id/textView_birth_date" />
+
+    <TextView
+        android:id="@+id/textView_gender"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="@string/user_profile_gender"
+        android:layout_below="@+id/textView_birth_date"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:id="@+id/user_gender"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:layout_alignBaseline="@+id/textView_gender"
+        android:layout_alignBottom="@+id/textView_gender"
+        android:layout_toEndOf="@+id/textView_gender" />
+
+    <TextView
+        android:id="@+id/textView_user_type"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="@string/user_profile_user_type"
+        android:layout_below="@+id/textView_gender"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:id="@+id/user_type"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:layout_alignBaseline="@+id/textView_user_type"
+        android:layout_alignBottom="@+id/textView_user_type"
+        android:layout_toEndOf="@+id/textView_user_type" />
+
+    <TextView
+        android:id="@+id/textView_illiterate"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="@string/user_profile_illiterate"
+        android:layout_below="@+id/textView_user_type"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:id="@+id/user_illiterate"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:layout_alignBaseline="@+id/textView_illiterate"
+        android:layout_alignBottom="@+id/textView_illiterate"
+        android:layout_toEndOf="@+id/textView_illiterate" />
+
 </RelativeLayout>
