--- a/app/src/main/res/layout/fragment_graphs.xml
+++ b/app/src/main/res/layout/fragment_graphs.xml
@@ -4,9 +4,43 @@
     android:layout_height="match_parent"
     tools:context=".fragments.GraphsFragment">
 
-    <ListView
-        android:id="@+id/graphs_list"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="match_parent"
+        android:id="@+id/scrollView" >
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:text="@string/graphs_pms_title" />
+
+            <com.github.mikephil.charting.charts.LineChart
+                android:id="@+id/pms_line_chart"
+                android:layout_width="match_parent"
+                android:layout_height="250dp" />
+
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="25dp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:text="@string/graphs_bins_title" />
+
+            <com.github.mikephil.charting.charts.LineChart
+                android:id="@+id/bins_line_chart"
+                android:layout_width="match_parent"
+                android:layout_height="250dp" />
+
+        </LinearLayout>
+    </ScrollView>
 
 </FrameLayout>
