--- a/app/src/main/res/layout/fragment_aqreadings_list_arcprogress.xml
+++ b/app/src/main/res/layout/fragment_aqreadings_list_arcprogress.xml
@@ -1,11 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/ap_item_list"
-    android:name="com.specknet.airrespeck.fragments.ItemFragment"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    app:layoutManager="LinearLayoutManager"
-    tools:context=".fragments.AQReadingsFragment"
-    tools:listitem="@layout/list_item_arcprogress" />
+    android:layout_height="match_parent">
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/ap_item_list"
+        android:name="com.specknet.airrespeck.fragments.ItemFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layoutManager="LinearLayoutManager"
+        tools:context=".fragments.AQReadingsFragment"
+        tools:listitem="@layout/list_item_arcprogress" />
+
+    <include layout="@layout/content_connecting" />
+
+</RelativeLayout>
