--- a/app/src/main/res/layout/fragment_graphs.xml
+++ b/app/src/main/res/layout/fragment_graphs.xml
@@ -4,43 +4,50 @@
     android:layout_height="match_parent"
     tools:context=".fragments.GraphsFragment">
 
-    <ScrollView
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/scrollView" >
+        android:layout_height="match_parent">
 
-        <LinearLayout
+        <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_height="match_parent"
+            android:id="@+id/scrollView" >
 
-            <TextView
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:text="@string/graphs_pms_title" />
+                android:orientation="vertical">
 
-            <com.github.mikephil.charting.charts.LineChart
-                android:id="@+id/pms_line_chart"
-                android:layout_width="match_parent"
-                android:layout_height="250dp" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:text="@string/graphs_pms_title" />
 
-            <Space
-                android:layout_width="match_parent"
-                android:layout_height="25dp" />
+                <com.github.mikephil.charting.charts.LineChart
+                    android:id="@+id/pms_line_chart"
+                    android:layout_width="match_parent"
+                    android:layout_height="250dp" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:text="@string/graphs_bins_title" />
+                <Space
+                    android:layout_width="match_parent"
+                    android:layout_height="25dp" />
 
-            <com.github.mikephil.charting.charts.LineChart
-                android:id="@+id/bins_line_chart"
-                android:layout_width="match_parent"
-                android:layout_height="250dp" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:text="@string/graphs_bins_title" />
 
-        </LinearLayout>
-    </ScrollView>
+                <com.github.mikephil.charting.charts.LineChart
+                    android:id="@+id/bins_line_chart"
+                    android:layout_width="match_parent"
+                    android:layout_height="250dp" />
 
+            </LinearLayout>
+        </ScrollView>
+
+        <include layout="@layout/content_connecting" />
+
+    </RelativeLayout>
 </FrameLayout>
