--- a/app/src/main/res/layout/fragment_home_listview.xml
+++ b/app/src/main/res/layout/fragment_home_listview.xml
@@ -22,12 +22,15 @@
             android:layout_height="0dp"
             android:layout_weight="1" />
 
-        <TextView
-            android:id="@+id/feedback"
+        <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
-            android:gravity="center_horizontal" />
+            android:gravity="center_horizontal">
+
+            <include layout="@layout/content_feedback" />
+
+        </FrameLayout>
 
     </LinearLayout>
 
