--- a/app/src/main/res/layout/fragment_home_segmentedbar.xml
+++ b/app/src/main/res/layout/fragment_home_segmentedbar.xml
@@ -54,12 +54,15 @@
             android:layout_height="0dp"
             android:layout_weight="1" />
 
-        <TextView
-            android:id="@+id/feedback"
+        <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="2"
-            android:gravity="center" />
+            android:gravity="center">
+
+            <include layout="@layout/content_feedback" />
+
+        </FrameLayout>
 
     </LinearLayout>
 
