Bluetooth devices connection loading in home fragment modified. Some comments on user deletion feature (possibly won't be implemented).

--- a/app/src/main/res/layout/fragment_home_listview.xml
+++ b/app/src/main/res/layout/fragment_home_listview.xml
@@ -4,34 +4,43 @@
     android:layout_height="match_parent"
     tools:context=".fragments.HomeFragment">
 
-    <LinearLayout
+    <RelativeLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="match_parent">
 
-        <TextView
-            android:id="@+id/readings_title"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="@string/readings_title" />
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-        <ListView
-            android:id="@+id/readings_list"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1" />
+            <TextView
+                android:id="@+id/readings_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="@string/readings_title" />
 
-        <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:gravity="center_horizontal">
+            <ListView
+                android:id="@+id/readings_list"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1" />
 
-            <include layout="@layout/content_feedback" />
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:gravity="center_horizontal">
 
-        </FrameLayout>
+                <include layout="@layout/content_feedback" />
 
-    </LinearLayout>
+            </FrameLayout>
+
+        </LinearLayout>
+
+        <include layout="@layout/content_connecting" />
+
+    </RelativeLayout>
 
 </FrameLayout>
