--- a/app/src/main/res/drawable/background_rounded_lightgrey.xml
+++ b/app/src/main/res/drawable/background_rounded_lightgrey.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#efefef"/>
+    <solid android:color="#e0e0e0"/>
     <corners android:radius="20dip"/>
     <padding
         android:bottom="0dip"
