--- a/app/src/main/res/layout/fragment_daphne_values.xml
+++ b/app/src/main/res/layout/fragment_daphne_values.xml
@@ -25,23 +25,47 @@
             android:text="-.- BrPM"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:textColor="#041389"
-            android:textSize="@dimen/text_size_bpm_large"/>
+            android:textSize="@dimen/text_size_bpm_large"
+            />
 
         <TextView
             android:id="@+id/text_breathing"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="20dp"
             android:gravity="center"
             android:text="-.- BrPM"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:textSize="@dimen/text_size_bpm_small"
-            android:layout_marginBottom="40dp"/>
+            />
+
+        <TextView
+            android:id="@+id/text_pm10"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="PM 10: 0.00 μg/m³"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textColor="#041389"
+            android:textSize="@dimen/text_size_bpm_small"
+            />
+
+        <TextView
+            android:id="@+id/text_pm2_5"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="40dp"
+            android:gravity="center"
+            android:text="PM 2.5: 0.00 μg/m³"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textColor="#041389"
+            android:textSize="@dimen/text_size_bpm_small"/>
 
         <ImageView
+            android:id="@+id/activity_icon"
             android:layout_width="80dp"
             android:layout_height="80dp"
-            app:srcCompat="@drawable/vec_standing_sitting"
-            android:id="@+id/activity_icon"/>
+            app:srcCompat="@drawable/vec_standing_sitting"/>
 
     </LinearLayout>
 </FrameLayout>
