--- a/app/src/main/res/layout/fragment_home_listview.xml
+++ b/app/src/main/res/layout/fragment_home_listview.xml
@@ -19,7 +19,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text="@string/readings_title" />
+                android:text="@string/readings_title"
+                android:layout_marginBottom="5dp"
+                android:layout_marginTop="10dp"/>
 
             <ListView
                 android:id="@+id/readings_list"
