Smooth breathing data update implemented #3

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -21,4 +21,6 @@
         <item>@color/pocket_color_3</item>
         <item>@color/pocket_color_4</item>
     </integer-array>
+
+    <color name="breathing_graph_line_color">#3F51B5</color>
 </resources>
