Settings added for enabling/disabling the fragments in supervised mode. Settings added for enabling/disabling subject/supervised mode.

--- a/app/src/main/res/layout/fragment_aqreadings_list_arcprogress.xml
+++ b/app/src/main/res/layout/fragment_aqreadings_list_arcprogress.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layoutManager="LinearLayoutManager"
-        tools:context=".fragments.AQReadingsFragment"
+        tools:context=".fragments.SupervisedAirspeckReadingsFragment"
         tools:listitem="@layout/list_item_arcprogress" />
 
     <include layout="@layout/content_connecting" />
