--- a/app/src/main/res/layout/fragment_home_segmentedbar.xml
+++ b/app/src/main/res/layout/fragment_home_segmentedbar.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.HomeFragment">
+    tools:context=".fragments.SupervisedRESpeckReadingsFragment">
 
     <RelativeLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
