--- a/app/src/main/res/layout/fragment_subject_home.xml
+++ b/app/src/main/res/layout/fragment_subject_home.xml
@@ -8,7 +8,7 @@
              android:paddingLeft="20dp"
              android:paddingRight="20dp"
              android:paddingTop="20dp"
-             tools:context=".fragments.DaphneValuesFragment">
+             tools:context=".fragments.SubjectValuesFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
