--- a/app/src/main/res/layout/content_connecting.xml
+++ b/app/src/main/res/layout/content_connecting.xml
@@ -8,8 +8,8 @@
     android:layout_centerVertical="true"
     android:layout_centerHorizontal="true"
     android:orientation="vertical"
-    android:visibility="visible">
-    <!--android:background="#cceeeeee">-->
+    android:visibility="visible"
+    android:background="@drawable/background_rounded_white_transparent">
 
     <fr.castorflex.android.circularprogressbar.CircularProgressBar
         android:layout_width="wrap_content"
