Deleted connection symbol in ActivitySummaryFragment, as we don't need the connection to show the past data

--- a/app/src/main/res/layout/fragment_activity_summary.xml
+++ b/app/src/main/res/layout/fragment_activity_summary.xml
@@ -1,32 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-    <LinearLayout
+    <TextView
+        android:id="@+id/readings_title"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="7dp"
+        android:layout_marginTop="15dp"
+        android:gravity="center"
+        android:text="@string/activity_summary_title"/>
 
-        <TextView
-            android:id="@+id/readings_title"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="@string/activity_summary_title"
-            android:layout_marginBottom="7dp"
-            android:layout_marginTop="15dp"/>
+    <ListView
+        android:id="@+id/readings_list"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"/>
 
-        <ListView
-            android:id="@+id/readings_list"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"/>
-
-    </LinearLayout>
-
-    <include layout="@layout/content_connecting"/>
-
-</RelativeLayout>
-
+</LinearLayout>
