--- a/app/src/main/res/layout/content_connecting.xml
+++ b/app/src/main/res/layout/content_connecting.xml
@@ -22,6 +22,7 @@
         android:layout_height="25dp" />
 
     <TextView
+        android:id="@+id/connection_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
